--- a/paper/sections/abstract.tex
+++ b/paper/sections/abstract.tex
@@ -5,7 +5,7 @@ Bitcoin's success has led to significant interest in its underlying novel techni
 Nearly 10 years after Bitcoin's initial release, a lack of clarity still persists within academia and industry over Blockchain's capabilities, its relationship to competing technologies, and which of its proposed use-cases are tenable and which are hype.
 In this paper we answer three common questions regarding Blockchain technology: (1) what exactly is Blockchain technology, (2) what capabilities does it provide, and (3) what are good applications for Blockchain technology.
 We accomplish this goal by using grounded theory-a structured approach to gathering and analysis of data more commonly used in other sciences-to analyze a large corpus of industry data.
-This method enable us to answer the above questions while limiting researcher bias, to separate industry thought leadership from peddled hype, and helped us identify open research questions related to Blockchain technology.  We also discuss lessons learned from our analysis of this space using this approach.
+This method enables us to answer the above questions while limiting researcher bias, to separate industry thought leadership from peddled hype, and helped us identify open research questions related to Blockchain technology.  We also discuss lessons learned from our analysis of this space using this approach.
 The audience for this paper is broad, seeking to help the majority of researchers come to better understanding of this popular topic.
 \end{abstract}
 
